--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,14 +13,13 @@ services:
       TODO_DB_USER: todo
       TODO_DB_PASSWORD: todo
       TODO_DB_NAME: todo
-      TODO_REDIS_HOST: todo-TODO_REDIS_HOST
+      TODO_REDIS_HOST: todo-redis
       TODO_REDIS_PORT: 6379
     volumes:
       - .:/app
     ports:
       - "18000:8080"
-    links:
-      - todo-db
+
   todo-db:
     image: mysql:8.0.29
     platform: linux/amd64
